# MCPShield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  SECURITY.md  deep-research-report.md  pyproject.toml  rules.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: checks.md  plugins.md  positioning.md
fixtures/ci-safe/secure-server/: CHANGELOG.md  SECURITY.md  server.json
plugins/examples/: plugin_file_count.py  plugin_todo_tag.py
plugins/trusted/: plugin_release_marker.py
samples/: insecure-server.json  package.json
scripts/: install-git-hooks.sh  pre-push-check.sh
src/mcp_risk_scanner/: __init__.py  checks.py  cli.py  collector.py  models.py  plugins.py  report.py  rules.py  scoring.py
src/mcpshield/: __init__.py  cli.py
tests/: test_batch_cli.py  test_cli_e2e.py  test_collector.py  test_docs.py  test_plugins.py  test_rules.py  test_scanner.py
