[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-risk-scanner"
version = "0.1.0"
description = "Phase 1 MCP server risk scanner CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
mcp-risk-scan = "mcp_risk_scanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
