[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-risk-scanner"
version = "0.2.0"
description = "Offline-first MCP server risk scanner CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "zaiafr" }]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
mcp-risk-scan = "mcp_risk_scanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
